--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,52 +3,35 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
-body{
-  display: flex;
-  justify-content: center;
-
+body {
+    display: flex;
+    justify-content: center;
+    background-color: #f5f5f5;
 }
 
-main{
-  max-width: 600px;
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+main {
+    max-width: 600px;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
 }
 
 
-
-
-/*
-Copyright (c) 2021 Kil Hyung-jin, with Reserved Font Name Pretendard.
-https://github.com/orioncactus/pretendard
-
-This Font Software is licensed under the SIL Open Font License, Version 1.1.
-This license is copied below, and is also available with a FAQ at:
-http://scripts.sil.org/OFL
-*/
-
-@font-face {
+/*@font-face {
   font-family: 'Pretendard';
   font-weight: 900;
   font-display: swap;
@@ -109,4 +92,4 @@ http://scripts.sil.org/OFL
   font-weight: 100;
   font-display: swap;
   src: local('Pretendard Thin'), url(../../public/fonts/woff2/Pretendard-Thin.woff2) format('woff2'), url(../../public/fonts/woff/Pretendard-Thin.woff) format('woff');
-}
+}*/
